--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,9 @@ jobs:
     - name: Install dependencies for ingestion
       run: |
         pip install -r ingestion/requirements.txt
+    - name: Install pytest
+      run: |
+        pip install pytest
     - name: Run chatbot tests
       run: |
         pytest tests/test_chatbot.py --maxfail=1 --disable-warnings -q
